// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a MediaVersionUpload field for images 1`] = `
Array [
  <div
    class="mediaContainer default"
    role="presentation"
    tabindex="0"
  >
    <img
      class="thumbnail"
      src="sulu-400x400-inset"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
          <div
            class="uploadInfoText"
          >
            sulu_media.upload_new_version
          </div>
        </div>
      </div>
    </div>
    <input
      style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  />,
  <div
    class="buttons"
  >
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-focus"
        class="su-focus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.set_focus_point
      </span>
    </button>
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-cut"
        class="su-cut buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.define_crops
      </span>
    </button>
  </div>,
]
`;

exports[`Render a MediaVersionUpload field for videos 1`] = `
Array [
  <div
    class="mediaContainer default"
    role="presentation"
    tabindex="0"
  >
    <img
      class="thumbnail"
      src="sulu-400x400-inset"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
          <div
            class="uploadInfoText"
          >
            sulu_media.upload_new_version
          </div>
        </div>
      </div>
    </div>
    <input
      style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  />,
  <div
    class="buttons"
  >
    <div
      role="presentation"
      tabindex="0"
    >
      <button
        class="button link hasText"
        type="button"
      >
        <span
          aria-label="su-image"
          class="su-image buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_media.upload_preview_image
        </span>
      </button>
      <input
        multiple=""
        style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
        tabindex="-1"
        type="file"
      />
    </div>
    <button
      class="button link hasText"
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="su-trash-alt buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.delete_preview_image
      </span>
    </button>
  </div>,
]
`;

exports[`Render a MediaVersionUpload field for videos without assigned preview image 1`] = `
Array [
  <div
    class="mediaContainer default"
    role="presentation"
    tabindex="0"
  >
    <img
      class="thumbnail"
      src="sulu-400x400-inset"
    />
    <div
      class="uploadIndicatorContainer"
    >
      <div
        class="uploadIndicator"
      >
        <div>
          <span
            aria-label="su-upload"
            class="su-upload uploadIcon"
          />
          <div
            class="uploadInfoText"
          >
            sulu_media.upload_new_version
          </div>
        </div>
      </div>
    </div>
    <input
      style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
      tabindex="-1"
      type="file"
    />
  </div>,
  <div
    class="buttons"
  />,
  <div
    class="buttons"
  >
    <div
      role="presentation"
      tabindex="0"
    >
      <button
        class="button link hasText"
        type="button"
      >
        <span
          aria-label="su-image"
          class="su-image buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_media.upload_preview_image
        </span>
      </button>
      <input
        multiple=""
        style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
        tabindex="-1"
        type="file"
      />
    </div>
    <button
      class="button link hasText"
      disabled=""
      type="button"
    >
      <span
        aria-label="su-trash-alt"
        class="su-trash-alt buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_media.delete_preview_image
      </span>
    </button>
  </div>,
]
`;
